# STM32CubeL4

./: .gitmodules
Projects/NUCLEO-L433RC-P/Templates/: .gitignore  CMakeLists.txt
Projects/NUCLEO-L433RC-P/Templates/Inc/: bme280_port.h  main.h  stm32l4xx_it.h
Projects/NUCLEO-L433RC-P/Templates/SW4STM32/STM32L433RC_NUCLEO/: .cproject  .project
Projects/NUCLEO-L433RC-P/Templates/Src/: bme280_port.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
